--- a/Ecommerce 3AV/index.html
+++ b/Ecommerce 3AV/index.html
@@ -32,7 +32,7 @@
                 <h4 class="text-h4">Bem-vindo à <span>LogTech</span></h4>
                 <h1 class="text-h1">Tecnologia de ponta ao seu alcance!</h1>
                 <p>Oferecemos uma ampla gama de produtos tecnológicos para atender às suas necessidades, desde smartphones e laptops até gadgets inteligentes para tornar sua vida mais fácil.</p>
-                <a href="#" class="home-btn">Garanta já</a>
+                <a href="menu.html" class="home-btn">Garanta já</a>
             </div>
             <div class="home-img">
                 <img src="./utils/img/imagem-3.png" alt="hamburguer">
