--- a/Ecommerce 3AV/about.html
+++ b/Ecommerce 3AV/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./utils/css/styles.css">
-    <title>webSite</title>
+    <title>LogTech</title>
 </head>
 <body class="body-2">
     <header>
