--- a/Ecommerce 3AV/index.html
+++ b/Ecommerce 3AV/index.html
@@ -35,7 +35,7 @@
                 <a href="menu.html" class="home-btn">Garanta já</a>
             </div>
             <div class="home-img">
-                <img src="./utils/img/imagem-3.png" alt="hamburguer">
+                <img src="./utils/img/imagem-3.png" alt="">
             </div>
         </section>
     </main>
